--- a/app/src/main/res/layout/card_discipline_classes.xml
+++ b/app/src/main/res/layout/card_discipline_classes.xml
@@ -1,161 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    android:id="@+id/view_root"
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardElevation="2dp"
-    app:cardCornerRadius="2dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginRight="8dp">
-
-    <RelativeLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <android.support.v7.widget.CardView
+        android:id="@+id/view_root"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardElevation="2dp"
+        app:cardCornerRadius="2dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp">
 
         <RelativeLayout
-            android:id="@+id/rl_main_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="8dp">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_class_subject"
+            <RelativeLayout
+                android:id="@+id/rl_main_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:textColor="@color/primaryText"
-                android:fontFamily="@font/roboto_regular"
-                tools:text="27. Análise de sistemas com transformadas: A função de transferência e equações..."/>
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="8dp">
 
-            <LinearLayout
-                android:id="@+id/ll_class_situation"
+                <TextView
+                    android:id="@+id/tv_class_subject"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:textColor="@color/primaryText"
+                    android:fontFamily="@font/roboto_regular"
+                    tools:text="27. Análise de sistemas com transformadas: A função de transferência e equações..."/>
+
+                <LinearLayout
+                    android:id="@+id/ll_class_situation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_class_subject"
+                    android:layout_marginTop="8dp"
+                    android:paddingBottom="8dp">
+
+                    <ImageView
+                        android:id="@+id/iv_class_situation"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        tools:src="@drawable/ic_check_black_24dp"
+                        android:tint="@android:color/holo_green_light"/>
+
+                    <TextView
+                        android:id="@+id/tv_class_situation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="13sp"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="@color/secondaryText"
+                        android:fontFamily="@font/roboto_regular"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginLeft="4dp"
+                        tools:text="Não cadastrada"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_information"
+                    android:layout_below="@id/ll_class_situation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingBottom="8dp">
+
+                    <ImageView
+                        android:id="@+id/iv_calendar"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        app:srcCompat="@drawable/ic_calendar_black_24dp"
+                        android:tint="#000"/>
+
+                    <TextView
+                        android:id="@+id/tv_class_date"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="13sp"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="@color/secondaryText"
+                        android:fontFamily="@font/roboto_regular"
+                        android:layout_marginStart="2dp"
+                        android:layout_marginLeft="2dp"
+                        tools:text="22/12/2017 Sexta"/>
+
+                    <ImageView
+                        android:id="@+id/iv_attachments"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginStart="24dp"
+                        app:srcCompat="@drawable/ic_attach_file_black_24dp"
+                        android:tint="?attr/color_primary"/>
+
+                    <TextView
+                        android:id="@+id/tv_class_attachments"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="@color/secondaryText"
+                        android:fontFamily="@font/roboto_regular"
+                        android:layout_marginStart="2dp"
+                        android:layout_marginLeft="2dp"
+                        tools:text="3"/>
+                </LinearLayout>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rl_expanded"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_class_subject"
-                android:layout_marginTop="8dp"
-                android:paddingBottom="8dp">
-
-                <ImageView
-                    android:id="@+id/iv_class_situation"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    tools:src="@drawable/ic_check_black_24dp"
-                    android:tint="@android:color/holo_green_light"/>
-
-                <TextView
-                    android:id="@+id/tv_class_situation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="13sp"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="@color/secondaryText"
-                    android:fontFamily="@font/roboto_regular"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginLeft="4dp"
-                    tools:text="Não cadastrada"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_information"
-                android:layout_below="@id/ll_class_situation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="8dp">
-
-                <ImageView
-                    android:id="@+id/iv_calendar"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    app:srcCompat="@drawable/ic_calendar_black_24dp"
-                    android:tint="#000"/>
+                android:layout_below="@id/rl_main_content"
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:animateLayoutChanges="true">
+                <View
+                    android:layout_marginTop="4dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/divider"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"/>
 
                 <TextView
-                    android:id="@+id/tv_class_date"
-                    android:layout_width="200dp"
+                    android:id="@+id/dev_tv_helper_material_id"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="13sp"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="@color/secondaryText"
-                    android:fontFamily="@font/roboto_regular"
-                    android:layout_marginStart="2dp"
-                    android:layout_marginLeft="2dp"
-                    tools:text="22/12/2017 Sexta"/>
+                    android:layout_marginTop="8dp"
+                    android:text="@string/class_helper_materials"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:textColor="@color/primaryText"
+                    android:fontFamily="@font/roboto_regular"/>
 
-                <ImageView
-                    android:id="@+id/iv_attachments"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginLeft="24dp"
-                    android:layout_marginStart="24dp"
-                    app:srcCompat="@drawable/ic_attach_file_black_24dp"
-                    android:tint="?attr/color_primary"/>
-
-                <TextView
-                    android:id="@+id/tv_class_attachments"
-                    android:layout_width="wrap_content"
+                <android.support.v7.widget.RecyclerView
+                    android:layout_below="@id/dev_tv_helper_material_id"
+                    android:id="@+id/rv_support_material"
+                    android:layout_marginTop="4dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="12sp"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="@color/secondaryText"
-                    android:fontFamily="@font/roboto_regular"
-                    android:layout_marginStart="2dp"
-                    android:layout_marginLeft="2dp"
-                    tools:text="3"/>
-            </LinearLayout>
+                    android:paddingBottom="8dp"
+                    android:clipToPadding="false"
+                    tools:itemCount="3"
+                    tools:listitem="@layout/item_class_support_material">
+                </android.support.v7.widget.RecyclerView>
+            </RelativeLayout>
         </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/rl_expanded"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/rl_main_content"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:animateLayoutChanges="true">
-            <View
-                android:layout_marginTop="4dp"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/divider"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"/>
-
-            <TextView
-                android:id="@+id/dev_tv_helper_material_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@string/class_helper_materials"
-                android:textAlignment="center"
-                android:gravity="center"
-                android:textColor="@color/primaryText"
-                android:fontFamily="@font/roboto_regular"/>
-
-            <android.support.v7.widget.RecyclerView
-                android:layout_below="@id/dev_tv_helper_material_id"
-                android:id="@+id/rv_support_material"
-                android:layout_marginTop="4dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="8dp"
-                android:clipToPadding="false"
-                tools:itemCount="3"
-                tools:listitem="@layout/item_class_support_material">
-            </android.support.v7.widget.RecyclerView>
-        </RelativeLayout>
-    </RelativeLayout>
-</android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
+</layout>
