--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -63,6 +63,14 @@
             android:title="@string/pref_grades_date_changed"/>
 
         <CheckBoxPreference
+            android:defaultValue="true"
+            android:icon="@drawable/ic_dce_icon_accent_30dp"
+            android:key="show_dce_notifications"
+            android:summaryOff="@string/pref_show_dce_notifications_disabled"
+            android:summaryOn="@string/pref_show_dce_notifications_enabled"
+            android:title="@string/pref_show_dce_notifications"/>
+
+        <CheckBoxPreference
             android:defaultValue="false"
             android:icon="@drawable/ic_balloon_accent_30dp"
             android:key="show_events_notification"
