--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,6 +33,7 @@
     <color name="enrollment_color">#FF9800</color>
     <color name="flowchart_color">#009688</color>
     <color name="big_tray_color">#F44336</color>
+    <color name="school_history_color">#ffcf0e</color>
 
     <color name="facebook_blue">#3B5998</color>
     <color name="red">#F44336</color>
