--- a/app/src/main/res/layout/item_schedule_line_class.xml
+++ b/app/src/main/res/layout/item_schedule_line_class.xml
@@ -56,6 +56,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:maxLines="1"
+                android:text="@{location.location.startsAt}"
                 android:textAlignment="center"
                 android:textColor="@color/text_primary_dark"
                 app:layout_constraintBottom_toTopOf="@+id/divider_time"
@@ -89,6 +90,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:maxLines="1"
+                android:text="@{location.location.endsAt}"
                 android:textAlignment="center"
                 android:textColor="@color/text_primary_dark"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -104,6 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:maxLines="1"
+                android:text="@{location.singleGroup().singleClass().singleDiscipline().name}"
                 android:textColor="@color/blue_accent"
                 app:layout_constraintBaseline_toBaselineOf="@+id/text_start_time"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -126,6 +129,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
+                android:text="@{location.singleGroup().singleClass().singleDiscipline().code}"
                 android:textSize="12sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/text_end_time"
                 app:layout_constraintStart_toEndOf="@+id/text_end_time"
@@ -138,6 +142,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:maxLines="1"
+                android:text="@{location.location.modulo}"
                 android:textSize="12sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/text_end_time"
                 app:layout_constraintStart_toEndOf="@+id/text_class_code"
@@ -149,6 +154,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:maxLines="1"
+                android:text="@{location.location.room}"
                 android:textSize="12sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/text_end_time"
                 app:layout_constraintStart_toEndOf="@+id/text_class_modulo"
