--- a/app/src/main/res/layout/item_about_contributor.xml
+++ b/app/src/main/res/layout/item_about_contributor.xml
@@ -23,7 +23,7 @@
     <data>
         <variable
             name="contributor"
-            type="com.forcetower.unes.core.model.Contributor"/>
+            type="com.forcetower.unes.core.model.unes.Contributor"/>
     </data>
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
