--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -130,4 +130,13 @@
         <item name="android:fontFamily">@font/product_sans_regular</item>
         <item name="textAllCaps">false</item>
     </style>
+
+    <style name="Widget.AppBar" parent="@style/Widget.Design.AppBarLayout">
+        <item name="popupTheme">@style/UTheme.PopupTheme</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:elevation">8dp</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="UTheme.PopupTheme" parent="ThemeOverlay.MaterialComponents.Light" />
 </resources>
