--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,6 +31,7 @@
 
     <color name="indigo_dark">#3c54fe</color>
     <color name="indigo">#4768fd</color>
+    <color name="default_tag_color">#2196F3</color>
 
     <color name="tab_drawable_color">#2196F3</color>
     <color name="tab_text_color">#2196F3</color>
