Session TimeHeaders Based on Google's IO

--- a/app/src/main/res/layout/item_event_session.xml
+++ b/app/src/main/res/layout/item_event_session.xml
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="80dp"/>
+            app:layout_constraintGuide_begin="@dimen/session_keyline"/>
 
         <TextView
             android:id="@+id/text_title"
