--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,4 +43,10 @@
     <dimen name="default_card_resting_elevation">1dp</dimen>
     <dimen name="event_schedule_padding_bottom">56dp</dimen>
     <dimen name="tag_dot_size">12dp</dimen>
+
+    <dimen name="session_keyline">64dp</dimen>
+    <dimen name="time_header_hour_text_size">24sp</dimen>
+    <dimen name="time_header_hour_min_text_size">20sp</dimen>
+    <dimen name="time_header_meridiem_text_size">12sp</dimen>
+    <dimen name="time_header_padding_top">4dp</dimen>
 </resources>
