--- a/app/src/main/res/layout/fragment_siecomp_schedule.xml
+++ b/app/src/main/res/layout/fragment_siecomp_schedule.xml
@@ -51,12 +51,14 @@
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
-                android:layout_height="?actionBarSize" />
+                android:layout_height="?actionBarSize"
+                app:tabTextAppearance="@style/TextAppearanceTabLayout"/>
         </com.google.android.material.appbar.AppBarLayout>
 
         <com.forcetower.unes.widget.CustomSwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:swipeRefreshColors="@{@intArray/swipe_refresh_colors}"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <androidx.viewpager.widget.ViewPager
