--- a/app/src/main/res/layout/item_event_session.xml
+++ b/app/src/main/res/layout/item_event_session.xml
@@ -35,7 +35,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?selectableItemBackground">
+        android:background="?selectableItemBackground"
+        android:paddingEnd="@dimen/spacing_normal"
+        android:paddingVertical="@dimen/spacing_normal"
+        tools:targetApi="o">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/keyline"
@@ -70,6 +73,7 @@
             android:id="@+id/text_duration_location"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@color/text_secondary_dark"
             app:layout_constraintEnd_toEndOf="@id/text_title"
