--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,6 +45,19 @@
     <color name="links_colors">#2196F3</color>
     <color name="links_highlighted">#2196F3</color>
 
+    <color name="teal">#31e7b6</color>
+    <color name="light_blue">#27e5fd</color>
+    <color name="yellow">#fcd230</color>
+    <color name="orange">#ff6c00</color>
+
+    <integer-array name="swipe_refresh_colors">
+        <item>@color/indigo</item>
+        <item>@color/teal</item>
+        <item>@color/light_blue</item>
+        <item>@color/yellow</item>
+        <item>@color/orange</item>
+    </integer-array>
+
     <color name="grey">#FF757575</color>
     <color name="navigation_grey">#757575</color>
     <color name="messages_stroke">#a9a9a9</color>
