--- a/app/src/main/res/layout/item_schedule_block_class.xml
+++ b/app/src/main/res/layout/item_schedule_block_class.xml
@@ -22,10 +22,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card_root"
         android:layout_width="60dp"
         android:layout_height="48dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="4dp"
+        android:layout_margin="2dp"
         android:stateListAnimator="@animator/default_card_raise"
         app:cardCornerRadius="4dp"
         app:strokeWidth="1dp"
