--- a/app/src/main/res/menu/home_bottom_navigation.xml
+++ b/app/src/main/res/menu/home_bottom_navigation.xml
@@ -35,7 +35,7 @@
         android:icon="@drawable/ic_discipline_black_24dp"/>
 
     <item
-        android:id="@+id/bottom_sheet_menu"
+        android:id="@+id/options_menu"
         android:title="@string/label_menu"
         android:icon="@drawable/ic_menu_white_24dp"/>
 </menu>
