--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -145,7 +145,7 @@
     <style name="Widget.Schedule.TimeHeaders">
         <item name="android:width">@dimen/session_keyline</item>
         <item name="android:paddingTop">@dimen/time_header_padding_top</item>
-        <item name="android:textColor">?colorPrimary</item>
+        <item name="android:textColor">@color/blue_accent</item>
         <item name="android:fontFamily">@font/product_sans_regular</item>
         <item name="hourTextSize">@dimen/time_header_hour_text_size</item>
         <item name="hourMinTextSize">@dimen/time_header_hour_min_text_size</item>
