--- a/app/src/main/res/layout/fragment_siecomp_schedule.xml
+++ b/app/src/main/res/layout/fragment_siecomp_schedule.xml
@@ -21,6 +21,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.forcetower.unes.core.vm.EventViewModel"/>
+    </data>
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -56,8 +62,11 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <com.forcetower.unes.widget.CustomSwipeRefreshLayout
+            android:id="@+id/swipe_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:refreshing="@{ viewModel.refreshing }"
+            app:onSwipeRefresh="@{() -> viewModel.loadSessions()}"
             app:swipeRefreshColors="@{@intArray/swipe_refresh_colors}"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
