--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,35 @@
     <dimen name="nav_drawer_width">264dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="z_app_bar">4dp</dimen>
+
+    <dimen name="bottom_sheet_corner_radius">24dp</dimen>
+    <dimen name="bottom_sheet_top_padding">8dp</dimen>
+    <dimen name="nav_header_size">56dp</dimen>
+    <dimen name="nav_header_keyline">80dp</dimen>
+    <dimen name="third_keyline">72dp</dimen>
+    <dimen name="second_keyline">24dp</dimen>
+    <dimen name="drag_dismiss_distance">112dp</dimen>
+    <dimen name="padding_normal">16dp</dimen>
+    <dimen name="spacing_common">8dp</dimen>
+    <dimen name="spacing_normal">16dp</dimen>
+    <dimen name="display_4_text_size">112dp</dimen>
+    <dimen name="about_app_name_header">224dp</dimen>
+    <dimen name="spacing_large">32dp</dimen>
+    <dimen name="about_header_image">80dp</dimen>
+    <dimen name="about_header_margin">8dp</dimen>
+    <dimen name="contributor_card_corners">6dp</dimen>
+    <dimen name="contributor_image_size">56dp</dimen>
+    <dimen name="contributor_default_elevation">1dp</dimen>
+    <dimen name="contributor_card_raised">6dp</dimen>
+    <dimen name="spacing_xlarge">48dp</dimen>
+    <dimen name="default_card_raised_elevation">8dp</dimen>
+    <dimen name="default_card_resting_elevation">1dp</dimen>
+    <dimen name="event_schedule_padding_bottom">56dp</dimen>
+    <dimen name="tag_dot_size">12dp</dimen>
+
+    <dimen name="session_keyline">64dp</dimen>
+    <dimen name="time_header_hour_text_size">24sp</dimen>
+    <dimen name="time_header_hour_min_text_size">20sp</dimen>
+    <dimen name="time_header_meridiem_text_size">12sp</dimen>
+    <dimen name="time_header_padding_top">16dp</dimen>
 </resources>
