--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -16,11 +16,74 @@
 
     <style name="AppTheme.EventsActivity" parent="AppTheme"/>
 
+    <style name="AppTheme.Light">
+        <item name="android:windowBackground">@color/white</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:fontFamily">@font/product_sans_regular</item>
+        <item name="colorPrimary">#FFF</item>
+        <item name="colorPrimaryDark">#FFF</item>
+        <item name="colorAccent">#2196F3</item>
+    </style>
+
+    <style name="AppTheme.Light.Abs"/>
+
     <style name="AppTheme.PreferencesStyle" parent="AppTheme">
         <item name="android:listDivider">@null</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+
+    <style name="Widget.Schedule" parent="@android:style/Widget" />
+
+    <style name="Widget.Schedule.TimeHeaders">
+        <item name="android:width">@dimen/session_keyline</item>
+        <item name="android:paddingTop">@dimen/time_header_padding_top</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:fontFamily">@font/product_sans_regular</item>
+        <item name="hourTextSize">@dimen/time_header_hour_text_size</item>
+        <item name="hourMinTextSize">@dimen/time_header_hour_min_text_size</item>
+        <item name="meridiemTextSize">@dimen/time_header_meridiem_text_size</item>
+    </style>
+
+    <style name="Widget.AppBar" parent="@style/Widget.Design.AppBarLayout">
+        <item name="popupTheme">@style/UTheme.PopupTheme</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:elevation">8dp</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="UTheme.PopupTheme" parent="ThemeOverlay.MaterialComponents.Light" />
+
+    <style name="TextAppearanceSubtitle2" parent="TextAppearance.MaterialComponents.Subtitle2">
+        <item name="fontFamily">@font/product_sans_regular</item>
+    </style>
+
+    <style name="TextAppearanceTabLayout" parent="TextAppearance.MaterialComponents.Tab">
+        <item name="android:fontFamily">@font/product_sans_regular</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="UTheme.TextAppearance" parent="TextAppearance.AppCompat">
+        <item name="android:fontFamily">@font/product_sans_regular</item>
+    </style>
+
+    <style name="UTheme.TextAppearance.Headline1" parent="UTheme.TextAppearance">
+        <item name="android:textColor">@color/text_primary_dark</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="UTheme.TextAppearance.Headline2" parent="UTheme.TextAppearance">
+        <item name="android:textColor">@color/text_primary_dark</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="UTheme.TextAppearance.Common" parent="UTheme.TextAppearance">
+        <item name="android:textColor">@color/text_secondary_dark</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 
 </resources>
