--- a/app/src/main/res/layout/fragment_schedule_new.xml
+++ b/app/src/main/res/layout/fragment_schedule_new.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -122,6 +122,8 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_siecomp_schedule"
+            android:visibility="gone"
+            tools:visibility="visible"
             style="@style/Widget.MaterialComponents.Button"
             android:letterSpacing=".001"
             android:layout_width="wrap_content"
